Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2475

qpid/messaging/Session.h r928855 breaks Windows build - macro conflict

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.7
    • 0.7
    • C++ Client
    • None
    • Windows

    Description

      this change broke on Windows:

      Index: C:/qpid/trunk/qpid/cpp/include/qpid/messaging/Session.h
      ===================================================================
      — C:/qpid/trunk/qpid/cpp/include/qpid/messaging/Session.h (revision 928854)
      +++ C:/qpid/trunk/qpid/cpp/include/qpid/messaging/Session.h (revision 928855)
      @@ -102,7 +102,7 @@

      • which case the passed in receiver reference will be set to the
      • receiver for that message or false if no message was available.
        */
      • QPID_CLIENT_EXTERN bool nextReceiver(Receiver&, Duration timeout=INFINITE_DURATION);
        + QPID_CLIENT_EXTERN bool nextReceiver(Receiver&, Duration timeout=Duration::INFINITE);
        /**
      • Returns the receiver for the next available message. If there
      • are no available messages at present the call will block for up
        @@ -111,7 +111,7 @@
        *@exception Receiver::NoMessageAvailable if no message became available in
      • time.
        */
      • QPID_CLIENT_EXTERN Receiver nextReceiver(Duration timeout=INFINITE_DURATION);
        + QPID_CLIENT_EXTERN Receiver nextReceiver(Duration timeout=Duration::INFINITE);

      /**

      • Create a new sender through which messages can be sent to the

      These errors occur during compile:

      C:\qpid\trunk\qpid\cpp\include\qpid/messaging/Session.h(105) : error C2589: 'constant' : illegal token on right side of '::'
      C:\qpid\trunk\qpid\cpp\include\qpid/messaging/Session.h(114) : error C2589: 'constant' : illegal token on right side of '::'

      Because of this definition in the Windows SDK:

      #define INFINITE 0xFFFFFFFF // Infinite timeout

      Can Duration::INFINITE, although a very good name, change to something like BOUNDLESS?

      Attachments

        Activity

          People

            shuston Stephen D. Huston
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: