Rename Duration::INFINITE to Duration::FOREVER; resolves QPID-2475. Added missing QPID_CLIENT_EXTERN where needed in Duration class to build on Windows.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@929240 13f79535-47bb-0310-9956-ffa450edef68