cpp/src/qpid/messaging/Duration.cpp
@@ -37,7 +37,7 @@ Duration operator*(uint64_t multiplier, const Duration& duration)
     return Duration(duration.getMilliseconds() * multiplier);
 }
 
-const Duration Duration::INFINITE(std::numeric_limits<uint64_t>::max());
+const Duration Duration::FOREVER(std::numeric_limits<uint64_t>::max());
 const Duration Duration::IMMEDIATE(0);
 const Duration Duration::SECOND(1000);
 const Duration Duration::MINUTE(SECOND * 60);
