qpid/cpp/examples/messaging/drain.cpp
@@ -64,7 +64,7 @@ struct Options : public qpid::Options
 
     Duration getTimeout()
     {
-        if (forever) return Duration::INFINITE;
+        if (forever) return Duration::FOREVER;
         else return timeout*Duration::SECOND;
 
     }
